fix extra space on the right side
Added overflow: hidden to prevent animated elements from enlarging in strange ways.

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -7,6 +7,7 @@
   color: rgb(201, 182, 76);
   box-sizing: border-box;
   font-weight: 300;
+  overflow: hidden;
   // display: flex;
   // flex-wrap: wrap;
   // justify-content: center;
