--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   width: 100vw;
   margin: 0;
+  overflow: hidden;
 }
 
 #left,
@@ -46,31 +47,22 @@
 
 /* If screen is smaller than a large mobile, do not show */
 @media (max-width: 819px) {
+  #left,
   #right {
-    flex-grow: 0;
-  }
-  #left {
     font-size: 4rem;
   }
 }
 
 @media (max-width: 609px) {
-  #left {
+  #left,
+  #right {
     font-size: 3rem;
   }
 }
 
 @media (max-width: 426px) {
-  #left {
+  #left,
+  #right {
     font-size: 2rem;
-    border: none;
   }
-}
-
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.5s;
-}
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-  opacity: 0;
 }
